Type checking and form submission based on existing pattern

--- a/deploy/stack-lambda.yml
+++ b/deploy/stack-lambda.yml
@@ -76,7 +76,7 @@ Resources:
       MemorySize: 128
       Environment:
         Variables:
-          ENV: Hello
+          PASSWORD: Hello123!
 
 Outputs:
   HttpLambdaArn:
