Added basic type support from jsonschmea for an API

--- a/deploy/stack-api-gateway.template
+++ b/deploy/stack-api-gateway.template
@@ -6,6 +6,11 @@ Parameters:
     Type: String
     MinLength: "1"
 
+  Password:
+    Description: Password for the submit
+    Type: String
+    MinLength: "1"
+
   HostedZoneId:
     Description: Hosted Zone ID of the domain, for certificate verification and for API Gateway records
     Type: String
@@ -33,6 +38,7 @@ Resources:
       TemplateURL: ./stack-lambda.yml
       Parameters:
         ReservedConcurrency: !Ref ReservedConcurrency
+        Password: !Ref Password
 
   CertificateStack:
     Type: AWS::CloudFormation::Stack
