--- a/deploy/stack-api-gateway.template
+++ b/deploy/stack-api-gateway.template
@@ -10,6 +10,7 @@ Parameters:
     Description: Password for the submit
     Type: String
     MinLength: "1"
+    NoEcho: true
 
   HostedZoneId:
     Description: Hosted Zone ID of the domain, for certificate verification and for API Gateway records
