Ports and adapters structure, with start of task processing code

--- a/deploy/stack-api-gateway.yml
+++ b/deploy/stack-api-gateway.yml
@@ -33,7 +33,7 @@ Resources:
     Type: AWS::ApiGatewayV2::Api
     Properties:
       Description: HTTPS JWT Authorizer for Lambda
-      Name: !Sub '${AWS::StackName}AuthJwtChecker'
+      Name: !Sub '${AWS::StackName}-AuthJwtChecker'
       ProtocolType: HTTP
       CorsConfiguration: !If
         - UseCors
