--- a/deploy/stack-api-gateway.template
+++ b/deploy/stack-api-gateway.template
@@ -40,6 +40,24 @@ Resources:
       Parameters:
         ReservedConcurrency: !Ref ReservedConcurrency
         Password: !Ref Password
+        TasksDynamodbTableName: !GetAtt TaskStack.Outputs.TableName
+        TasksStateMachineArn: !GetAtt TaskStack.Outputs.StateMachineArn
+
+  TaskStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      Parameters:
+        TableName: Tasks
+      TemplateURL: ./stack-tasks.yml
+
+  TaskStartStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      Parameters:
+        StartingLambdaExecutionRoleFriendlyName: !GetAtt HttpLambdaStack.Outputs.HttpLambdaExecutionRoleFriendlyName
+        DynamodbTableArn: !GetAtt TaskStack.Outputs.TableArn
+        StateMachineArn: !GetAtt TaskStack.Outputs.StateMachineArn
+      TemplateURL: ./stack-tasks-start.yml
 
   CertificateStack:
     Type: AWS::CloudFormation::Stack
