--- a/deploy/stack-cloudfront.template
+++ b/deploy/stack-cloudfront.template
@@ -35,6 +35,8 @@ Resources:
       Parameters:
         ReservedConcurrency: !Ref ReservedConcurrency
         Password: !Ref Password
+        TasksDynamodbTableName: !GetAtt TaskStack.Outputs.TableName
+        TasksStateMachineArn: !GetAtt TaskStack.Outputs.StateMachineArn
 
   HttpLambdaUrlStack:
     Type: AWS::CloudFormation::Stack
@@ -42,6 +44,22 @@ Resources:
       Parameters:
         HttpLambdaArn: !GetAtt HttpLambdaStack.Outputs.HttpLambdaArn
       TemplateURL: ./stack-lambda-url.yml
+
+  TaskStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      Parameters:
+        TableName: Tasks
+      TemplateURL: ./stack-tasks.yml
+
+  TaskStartStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      Parameters:
+        StartingLambdaExecutionRoleFriendlyName: !GetAtt HttpLambdaStack.Outputs.HttpLambdaExecutionRoleFriendlyName
+        DynamodbTableArn: !GetAtt TaskStack.Outputs.TableArn
+        StateMachineArn: !GetAtt TaskStack.Outputs.StateMachineArn
+      TemplateURL: ./stack-tasks-start.yml
 
   CloudFrontStack:
     Type: AWS::CloudFormation::Stack
