--- a/serve/adapter/lambda_function/example.template
+++ b/serve/adapter/lambda_function/example.template
@@ -36,10 +36,10 @@ Resources:
   HttpLambdaStack:
     Type: AWS::CloudFormation::Stack
     Properties:
-      TemplateURL: serve/adapter/lambda_function/stack-lambda.yml
+      TemplateURL: stack-lambda.yml
       Parameters:
         ReservedConcurrency: !Ref ReservedConcurrency
-        Password: !Ref Password
+        EncodedEnvironment: !Sub 'PASSWORD|${Password}'
 
   CertificateStack:
     Type: AWS::CloudFormation::Stack
@@ -47,7 +47,7 @@ Resources:
       Parameters:
         Domain: !Ref Domain
         HostedZoneId: !Ref HostedZoneId
-      TemplateURL: serve/adapter/lambda_function/stack-certificate.yml
+      TemplateURL: stack-certificate.yml
 
   ApiGatewayStack:
     Type: AWS::CloudFormation::Stack
@@ -56,7 +56,7 @@ Resources:
         LambdaArn: !GetAtt HttpLambdaStack.Outputs.HttpLambdaArn
         ThrottlingRateLimit: !Ref ThrottlingRateLimit
         ThrottlingBurstLimit: !Ref ThrottlingBurstLimit
-      TemplateURL: serve/adapter/lambda_function/stack-api-gateway.yml
+      TemplateURL: stack-api-gateway.yml
 
   ApiGatewayDomainStack:
     Type: AWS::CloudFormation::Stack
@@ -67,4 +67,4 @@ Resources:
         HostedZoneId: !Ref HostedZoneId
         Api: !GetAtt ApiGatewayStack.Outputs.Api
         V1Stage: !GetAtt ApiGatewayStack.Outputs.V1Stage
-      TemplateURL: serve/adapter/lambda_function/stack-api-gateway-domain.yml
+      TemplateURL: stack-api-gateway-domain.yml
