Tasks support encoded environment and layers, reduced size of lambda functions, explicit index.py

--- a/serve/adapter/lambda_function/stack-lambda.yml
+++ b/serve/adapter/lambda_function/stack-lambda.yml
@@ -83,8 +83,9 @@ Resources:
         - !Ref AWS::NoValue
       Architectures:
         - arm64
+      Timeout: 10
       Runtime: python3.11
-      Handler: serve.adapter.lambda_function.lambda_handler
+      Handler: index.lambda_handler
       MemorySize: 128
       Layers: !If
         - HasLayers
