--- a/tasks/adapter/lambda_function/stack-tasks.yml
+++ b/tasks/adapter/lambda_function/stack-tasks.yml
@@ -87,10 +87,10 @@ Resources:
         Statement:
           - Effect: Allow
             Action:
-              - dynamodb:GetItem
               - dynamodb:Query
               - dynamodb:PutItem
               - dynamodb:UpdateItem
+              - dynamodb:DeleteItem
             Resource:
               - !GetAtt DynamoTable.Arn
 
