--- a/stack-deploy-lambda.template
+++ b/stack-deploy-lambda.template
@@ -32,20 +32,35 @@ Parameters:
     Type: Number
     Default: 200
 
+  Layers:
+    Description: A space separated list of Layer ARNs including version
+    Type: String
+    Default: ""
+
+  TableName:
+    Description: DynamoDB table name
+    Type: String
+    Default: Table
+    MinLength: "1"
+
 Resources:
   HttpLambdaStack:
     Type: AWS::CloudFormation::Stack
     Properties:
       TemplateURL: serve/adapter/lambda_function/stack-lambda.yml
       Parameters:
+        Layers: !Ref Layers
+        DynamoDbTableArn: !GetAtt DynamoDbTable.Arn
+        DynamoDbTableName: !Sub '${AWS::StackName}-${TableName}'
         ReservedConcurrency: !Ref ReservedConcurrency
-        EncodedEnvironment: !Sub 'PASSWORD|${Password},KVSTORE_DYNAMODB_TABLE_NAME|${TaskStack.Outputs.TableName},TASKS_STATE_MACHINE_ARN|${TaskStack.Outputs.StateMachineArn}'
+        EncodedEnvironment: !Sub 'PASSWORD|${Password},TASKS_STATE_MACHINE_ARN|${TaskStack.Outputs.StateMachineArn}'
 
   TaskStack:
     Type: AWS::CloudFormation::Stack
     Properties:
       Parameters:
-        TableName: Tasks
+        DynamoDbTableArn: !GetAtt DynamoDbTable.Arn
+        DynamoDbTableName: !Sub '${AWS::StackName}-${TableName}'
         EncodedEnvironment: !Sub 'PASSWORD|${Password}'
       TemplateURL: tasks/adapter/lambda_function/stack-tasks.yml
 
@@ -54,7 +69,7 @@ Resources:
     Properties:
       Parameters:
         StartingLambdaExecutionRoleFriendlyName: !GetAtt HttpLambdaStack.Outputs.HttpLambdaExecutionRoleFriendlyName
-        DynamodbTableArn: !GetAtt TaskStack.Outputs.TableArn
+        DynamoDbTableArn: !GetAtt DynamoDbTable.Arn
         StateMachineArn: !GetAtt TaskStack.Outputs.StateMachineArn
       TemplateURL: tasks/driver/stack-tasks-start.yml
 
@@ -85,3 +100,22 @@ Resources:
         Api: !GetAtt ApiGatewayStack.Outputs.Api
         V1Stage: !GetAtt ApiGatewayStack.Outputs.V1Stage
       TemplateURL: serve/adapter/lambda_function/stack-api-gateway-domain.yml
+
+  DynamoDbTable:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      TableName: !Sub '${AWS::StackName}-${TableName}'
+      BillingMode: PAY_PER_REQUEST
+      AttributeDefinitions:
+        - AttributeName: pk
+          AttributeType: S
+        - AttributeName: sk
+          AttributeType: S
+      KeySchema:
+        - AttributeName: pk
+          KeyType: HASH
+        - AttributeName: sk
+          KeyType: RANGE
+      TimeToLiveSpecification:
+        AttributeName: ttl
+        Enabled: true
