--- a/serve/adapter/lambda_function/stack-api-gateway.yml
+++ b/serve/adapter/lambda_function/stack-api-gateway.yml
@@ -5,6 +5,16 @@ Description: |
   HTTP URL where the auth lambda can be called after a JWT Authorizer check
 
 Parameters:
+  Issuer:
+    Description: An optional issuer for a JWT check at the /api route. Used in the JwtAuthorizer
+    Type: String
+    Default: ""
+
+  Audiences:
+    Description: An optional space-separated string of audiences that should be allowed access. Used in the JwtAuthorizer
+    Type: String
+    Default: ""
+
   CorsOrigins:
     Description: A space-separated list of valid CORS origins that are allowed to call the lambda, or * to allow every origin.
     Type: String
@@ -27,6 +37,7 @@ Parameters:
 
 Conditions:
   UseCors: !Not [!Equals [!Ref "CorsOrigins", ""]]
+  UseJwtAuthorizer: !Not [!Equals [!Ref "Issuer", ""]]
 
 Resources:
   Api:
@@ -47,6 +58,19 @@ Resources:
             - '*'
           MaxAge: 10
         - !Ref AWS::NoValue
+
+  JwtAuthorizer:
+    Type: AWS::ApiGatewayV2::Authorizer
+    Condition: UseJwtAuthorizer
+    Properties:
+      Name: !Sub '${AWS::StackName}-JwtAuthorizer'
+      ApiId: !Ref Api
+      AuthorizerType: JWT
+      IdentitySource:
+        - '$request.header.Authorization'
+      JwtConfiguration:
+        Audience: !Split [" ", !Ref Audiences]
+        Issuer: !Ref Issuer
 
   V1Stage:
     Type: AWS::ApiGatewayV2::Stage
@@ -80,6 +104,22 @@ Resources:
 
       # The authorization type for the route. For WebSocket APIs, valid values are NONE for open access, AWS_IAM for using AWS IAM permissions, and CUSTOM for using a Lambda authorizer. For HTTP APIs, valid values are NONE for open access, JWT for using JSON Web Tokens, AWS_IAM for using AWS IAM permissions, and CUSTOM for using a Lambda authorizer.
       AuthorizationType: NONE
+      Target: !Join
+        - /
+        - - integrations
+          - !Ref Integration
+
+
+  ApiRoute:
+    # Could add in AuthorizationScopes too to limit access: https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-apigatewayv2-route.html#cfn-apigatewayv2-route-authorizationscopes
+    Type: AWS::ApiGatewayV2::Route
+    Properties:
+      ApiId: !Ref Api
+      RouteKey: 'ANY /api/{proxy+}'
+
+      # The authorization type for the route. For WebSocket APIs, valid values are NONE for open access, AWS_IAM for using AWS IAM permissions, and CUSTOM for using a Lambda authorizer. For HTTP APIs, valid values are NONE for open access, JWT for using JSON Web Tokens, AWS_IAM for using AWS IAM permissions, and CUSTOM for using a Lambda authorizer.
+      AuthorizationType: !If [ UseJwtAuthorizer, "JWT", "NONE"]
+      AuthorizerId: !If [UseJwtAuthorizer, !Ref JwtAuthorizer, "AWS::NoValue"]
       Target: !Join
         - /
         - - integrations
